# json-tlv-packer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
cmake/: import-apr.cmake
include/: jp_tlv_encoder.h
src/: example.c  jp_buffer_io.c  jp_invert_key_index_map.c  jp_key_array_encoder.c  jp_key_index_encoder.c  jp_tlv_encoder.c  jp_tlv_encoder.h  jp_tlv_encoder_private.h  jp_tlv_file_writers.c  jp_tlv_records.c  json_packer.c
tests/: jp_consolidation_test.sh  jp_test.c
tests/json-input/: input-json.1.txt  input-json.2.txt  input-json.3.txt
tools/: json_packer.c  tlv_consolidator.c  tlv_unpacker.c
